@@ -3,17 +3,18 @@
 <plist version="1.0">
 <dict>
 	<key>IBFramework Version</key>
-	<string>629</string>
+	<string>670</string>
 	<key>IBLastKnownRelativeProjectPath</key>
-	<string>../../LimeChat.xcodeproj</string>
+	<string>../LimeChat.xcodeproj</string>
 	<key>IBOldestOS</key>
 	<integer>5</integer>
 	<key>IBOpenObjects</key>
 	<array>
 		<integer>34</integer>
+		<integer>31</integer>
 	</array>
 	<key>IBSystem Version</key>
-	<string>9C31</string>
+	<string>9E17</string>
 	<key>targetFramework</key>
 	<string>IBCocoaFramework</string>
 </dict>
